objects/Opportunity_Role__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Full_name__c</fullName>
        <formula>IF(ISBLANK(Contact__c),&quot;&quot;,Contact__r.Full_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Full name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Record_Type__c</fullName>
        <formula>IF(ISBLANK(Contact__c),&quot;&quot;,Contact__r.RecordType.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Region__c</fullName>
        <formula>IF(ISBLANK(Contact__c),&quot;&quot;,TEXT(Contact__r.Region__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunity Roles</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Roles (Contact account)</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facilitator_confirmed_on__c</fullName>
        <description>Enter the date when we confirmed this Facilitator</description>
        <label>Facilitator confirmed on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Facilitator_position__c</fullName>
        <label>Facilitator position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Facilitator_position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Has_role_on_OC_Parent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has role on OC Parent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_roles_on_OC_PAX__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has roles on OC PAX</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_reference__c</fullName>
        <inlineHelpText>The invoice number from the invoice you receive from this person.</inlineHelpText>
        <label>Invoice reference</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lic_comm_mat__c</fullName>
        <inlineHelpText>This is the standard % commission this person would normally receive for Materials as Sell as defined on their license.</inlineHelpText>
        <label>Licensed % materials</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_comm_serv_ENSI__c</fullName>
        <inlineHelpText>This is the standard % commission ENSI would receive for Services when this person is Sell 1 as defined on their license.</inlineHelpText>
        <label>Licensed % services for ENSI</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_comm_serv_fac__c</fullName>
        <inlineHelpText>This is the standard % commission this person would normally receive as Facilitator for Services as defined on their licence.</inlineHelpText>
        <label>Licensed % services as Facilitator</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Lic_comm_serv_sell__c</fullName>
        <inlineHelpText>This is the standard % commission this person would normally receive for Services as Sell as defined on their license.</inlineHelpText>
        <label>Licensed % services as Sell</label>
        <precision>8</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Licence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Licence</label>
        <referenceTo>Licence__c</referenceTo>
        <relationshipLabel>Opportunity Roles based on this licence</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Master_facilitator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Master facilitator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Roles</relationshipLabel>
        <relationshipName>Opportunity_Roles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Parent_Opportunity__c</fullName>
        <formula>Opportunity__r.Parent_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quality_assurance_conducted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if quality assurance was conducted on this facilitator.</inlineHelpText>
        <label>Quality assurance conducted on this Fac.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer_account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referrer account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunity Roles as Referrer</relationshipLabel>
        <relationshipName>Opportunity_Roles_referrer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referrer_type__c</fullName>
        <label>Referrer type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CAANZ</fullName>
                </value>
                <value>
                    <fullName>Takeda</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roles__c</fullName>
        <description>Hidden field</description>
        <label>Roles</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Facilitator</fullName>
                </value>
                <value>
                    <fullName>Sell</fullName>
                </value>
                <value>
                    <fullName>Spot</fullName>
                </value>
                <value>
                    <fullName>ENSi</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sell_position__c</fullName>
        <label>Sell position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sell_position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shared_ID__c</fullName>
        <formula>Opportunity__r.Shared_ID_to_be_set__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Shared ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spot_position__c</fullName>
        <label>Spot position</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Spot_position</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sync_confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sync confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_comm_mat_mark__c</fullName>
        <formula>perc_comm_mat_sell__c + perc_comm_mat_spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % materials marketing</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_comm_serv__c</fullName>
        <formula>CASE(RecordType.DeveloperName, 
&quot;ENSi&quot;,perc_comm_serv_ENSI__c, 
&quot;Person&quot;,perc_comm_serv_sell__c+perc_comm_serv_spot__c+perc_comm_serv_fac__c,
&quot;Referrer&quot;,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % services</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_comm_serv_mark__c</fullName>
        <formula>perc_comm_serv_sell__c + perc_comm_serv_spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % services marketing</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_doll_ENSI_AUD__c</fullName>
        <formula>Total_doll_ENSI__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as ENSI AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_ENSI__c</fullName>
        <formula>Total_doll_comm_mat_ENSI__c + Total_doll_comm_serv_ENSI__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as ENSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_AUD__c</fullName>
        <formula>Total_doll_comm__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm__c</fullName>
        <formula>CASE(RecordType.DeveloperName,
&quot;ENSi&quot;,Total_doll_ENSI__c,
&quot;Person&quot;,Total_doll_pers__c,
&quot;Referrer&quot;,Total_doll_ref__c,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This amount is only applicable for in-house opportunities. For open courses, look at the ENSI Income on the opportunity</inlineHelpText>
        <label>Total $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark_AUD__c</fullName>
        <formula>Total_doll_comm_mark__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark__c</fullName>
        <formula>Total_doll_comm_mark_sell__c+Total_doll_comm_mark_spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark_sell_AUD__c</fullName>
        <formula>Total_doll_comm_mark_sell__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing as Sell AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark_sell__c</fullName>
        <formula>Total_doll_comm_serv_sell__c+Total_doll_comm_mat_sell__c+Total_doll_profit_sell__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing as Sell</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark_spot_AUD__c</fullName>
        <formula>Total_doll_comm_mark_spot__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing as Spot AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mark_spot__c</fullName>
        <formula>Total_doll_comm_serv_spot__c+Total_doll_comm_mat_spot__c+Total_doll_profit_spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ marketing as Spot</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_ENSI_AUD__c</fullName>
        <formula>Total_doll_comm_mat_ENSI__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ materials as ENSI AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_ENSI__c</fullName>
        <inlineHelpText>This amount is only applicable for in-house opportunities. For open courses, look at the ENSI Income on the opportunity</inlineHelpText>
        <label>Total $ materials as ENSI</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_ENSI_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>ENSI</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Material</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_sell_AUD__c</fullName>
        <formula>Total_doll_comm_mat_sell__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ materials as Sell AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_sell__c</fullName>
        <label>Total $ materials as Sell</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_mark_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Sell</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Material</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_spot_AUD__c</fullName>
        <formula>Total_doll_comm_mat_spot__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ materials as Spot AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_mat_spot__c</fullName>
        <label>Total $ materials as Spot</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_mark_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Material</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_ENSI_AUD__c</fullName>
        <formula>Total_doll_comm_serv_ENSI__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ services as ENSI AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_ENSI__c</fullName>
        <inlineHelpText>This amount is only applicable for in-house opportunities. For open courses, look at the ENSI Income on the opportunity</inlineHelpText>
        <label>Total $ services as ENSI</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_ENSI_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>ENSI</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_fac_AUD__c</fullName>
        <formula>Total_doll_comm_serv_fac__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ services as Facilitator AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_fac__c</fullName>
        <inlineHelpText>This amount is only applicable for in-house opportunities. For open courses Total $ non-split fees as Facilitator for Open Course Profit Split Total $ profit split as Facilitator</inlineHelpText>
        <label>Total $ services as Facilitator</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_fac_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Facilitator</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>notEqual</operation>
            <value>Facilitator (100%) fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_sell_AUD__c</fullName>
        <formula>Total_doll_comm_serv_sell__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ services as Sell AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_sell__c</fullName>
        <label>Total $ services as Sell</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_mark_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Sell</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_spot_AUD__c</fullName>
        <formula>Total_doll_comm_serv_spot__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ services as Spot AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_comm_serv_spot__c</fullName>
        <label>Total $ services as Spot</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_mark_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Service</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_doll_fac_AUD__c</fullName>
        <formula>Total_doll_fac__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ facilitator AUD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_fac__c</fullName>
        <formula>Total_nonsplit_fee_fac__c+Total_doll_comm_serv_fac__c+Total_doll_profit_fac__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Includes the total the facilitator fee</inlineHelpText>
        <label>Total $ facilitator</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_pers_AUD__c</fullName>
        <formula>Total_doll_pers__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as person AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_pers__c</fullName>
        <formula>Total_doll_comm_mark__c+Total_doll_fac__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as person</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_fac_AUD__c</fullName>
        <formula>Total_doll_profit_fac__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ profit split as Fac AUD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_fac__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Only for Open Course Profit Split opportunities</inlineHelpText>
        <label>Total $ profit split as Facilitator</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_sell_AUD__c</fullName>
        <formula>Total_doll_profit_sell__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ profit split as Sell AUD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_sell__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total $ profit split as Sell</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_spot_AUD__c</fullName>
        <formula>Total_doll_profit_spot__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ profit split as Spot AUD</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_profit_spot__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total $ profit split as Spot</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_ref_AUD__c</fullName>
        <formula>Total_doll_ref__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as referrer AUD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_ref__c</fullName>
        <formula>perc_comm_ref__c * Opportunity__r.Gross_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ as referrer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_doll_rev_to_be_rec__c</fullName>
        <inlineHelpText>The amount of revenue to be recognised beneath this Role.</inlineHelpText>
        <label>Total $ revenue to be recognised</label>
        <summarizedField>Opportunity_Role_Record__c.doll_rev_to_be_rec_ruv__c</summarizedField>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_fac_days__c</fullName>
        <label>Total Facilitator days</label>
        <summarizedField>Opportunity_Role_Record__c.fac_days__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Facilitator</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_fac_days_ad_hoc__c</fullName>
        <label>Total Facilitator days, ad hoc</label>
        <summarizedField>Opportunity_Role_Record__c.fac_days_ad_hoc_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Facilitator</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_fac_days_f2f__c</fullName>
        <label>Total Facilitator days, face to face</label>
        <summarizedField>Opportunity_Role_Record__c.fac_days_f2f_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Facilitator</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_mark_days__c</fullName>
        <formula>Total_mark_days_sell__c+Total_mark_days_spot__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Days</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_mark_days_f2f__c</fullName>
        <formula>Total_mark_days_sell_f2f__c+Total_mark_days_spot_f2f__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Marketing Days, face to face</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_mark_days_sell__c</fullName>
        <inlineHelpText>Share of the job days sold. If jobs are shared, the number of days are attributed to each marketer according to the marketing split</inlineHelpText>
        <label>Total marketing days as Sell</label>
        <summarizedField>Opportunity_Role_Record__c.mark_days_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Sell</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_mark_days_sell_f2f__c</fullName>
        <label>Total marketing days as Sell, F2F</label>
        <summarizedField>Opportunity_Role_Record__c.mark_days_f2f_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Sell</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_mark_days_spot__c</fullName>
        <label>Total marketing days as Spot</label>
        <summarizedField>Opportunity_Role_Record__c.mark_days_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_mark_days_spot_f2f__c</fullName>
        <label>Total marketing days as Spot, F2F</label>
        <summarizedField>Opportunity_Role_Record__c.mark_days_f2f_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.Role__c</field>
            <operation>equals</operation>
            <value>Spot</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_nonsplit_fee_fac_AUD__c</fullName>
        <formula>Total_nonsplit_fee_fac__c/Opportunity__r.Currency_exchange_rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total $ non-split fees as Fac. AU</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_nonsplit_fee_fac__c</fullName>
        <inlineHelpText>Amount for fixed facilitator fees and 100% travel time received</inlineHelpText>
        <label>Total $ non-split fees as Facilitator</label>
        <summarizedField>Opportunity_Role_Record__c.doll_comm_fac_ruv__c</summarizedField>
        <summaryFilterItems>
            <field>Opportunity_Role_Record__c.OP_Type_ruv__c</field>
            <operation>equals</operation>
            <value>Facilitator (100%) fee</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity_Role_Record__c.Opportunity_Role__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_perc_comm_mat__c</fullName>
        <formula>CASE(RecordType.DeveloperName, 
&quot;ENSi&quot;,perc_comm_mat_ENSI__c, 
&quot;Person&quot;,perc_comm_mat_sell__c+perc_comm_mat_spot__c,
&quot;Referrer&quot;,0,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total % materials</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>fac_days_customised__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Facilitator days customised</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fac_fixed_fee_as_perc__c</fullName>
        <formula>fac_fixed_fee_to_convert_to_perc__c / Opportunity__r.Value_For_Services_Profit_Commissions__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facilitator fixed fee as %</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>fac_fixed_fee_to_convert_to_perc__c</fullName>
        <inlineHelpText>This field is here to aid the CSM in the case of F1 being paid a flat fee, and this needing to be converted into a %. Enter $ value here, and refer to related % field for the answer. NOTE: gross revenue must be final AND you will need to copy and paste %</inlineHelpText>
        <label>Facilitator fixed fee to convert to %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>